# SupplyChainDigitalTwin

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  theme.json
attached_assets/: Pasted-3-Objectives-Success-Metrics-3-1-Objectives-Provide-an-intuitive-visual-modeling-tool-to-map-su-1740680671338.txt  Team KAL - Digital Twin PRD.docx
client/src/: App.tsx
client/src/components/dashboard/: metrics.tsx
client/src/components/layout/: sidebar.tsx
client/src/components/supply-chain/: disaster-simulation.tsx  flow-editor.tsx  node-creation-panel.tsx  node-types.tsx  risk-analysis.tsx
client/src/lib/: queryClient.ts  supply-chain.ts  websocket.ts
client/src/pages/: dashboard.tsx  supply-chain.tsx
server/: csv_loader.py  database.py  index.ts  main.py  models.py  openai.ts  routes.py  routes.ts  run.py  storage.ts  supply_chain_metrics.csv  websocket.ts
server/PNP/: pyvenv.cfg
shared/: schema.ts
